--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </div>
                     </li>
                     <li class="dropdown">
-                        <a href="#canais" aria-haspopup="true" aria-expanded="false">Canais de comunicação</a>
+                        <a href="#canais" aria-haspopup="true" aria-expanded="false">Comunicação</a>
                         <div class="dropdown-content">
                             <a href="#">Ouvidoria</a>
                             <a href="#">Fale Conosco</a>
