Cria e modifica o layout do modo escuro com acessibilidade.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             class="fas fa-plus"></i></button>
                     <button title="Diminuir Fonte" aria-label="Diminuir tamanho da fonte"><i
                             class="fas fa-minus"></i></button>
-                    <button title="Contraste" aria-label="Alternar modo de alto contraste"><i
+                    <button title="Contraste" aria-label="Alternar modo de alto contraste" id="darkModeToggle"><i
                             class="fas fa-adjust"></i></button>
                 </div>
                 <div class="social-media">
@@ -69,10 +69,6 @@
         </div>
         <nav class="main-nav" aria-label="Menu principal">
             <div class="mega-menu">
-                <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="main-menu"
-                    aria-label="Abrir menu">
-                    <i class="fas fa-bars"></i>
-                </button>
                 <ul id="main-menu">
                     <li><a href="#home" aria-current="page">Home</a></li>
                     <li class="dropdown">
@@ -145,7 +141,7 @@
         <!-- Destaques -->
         <section class="highlights">
             <div class="container">
-                <h2>Destaques</h2>
+                <h2 class="Destaques-title">Destaques</h2>
                 <div class="highlights-grid">
                     <div class="highlight-card">
                         <div class="card-image">
@@ -219,7 +215,7 @@
         <!-- Serviços -->
         <section id="servicos" class="services">
             <div class="container">
-                <h2>Serviços</h2>
+                <h2 class="Servicos-Title">Serviços</h2>
                 <div class="services-grid">
                     <div class="service-item">
                         <div class="service-icon">
@@ -276,7 +272,7 @@
         <!-- Informações Úteis -->
         <section class="useful-info">
             <div class="container">
-                <h2>Informações Úteis</h2>
+                <h2 class="Informacoes-Title">Informações Úteis</h2>
                 <div class="info-grid">
                     <div class="info-card">
                         <h3>Atendimento Geral</h3>
