Adiciona o plugin de acessibilidade UserWay.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 </head>
 
 <body>
+    <!-- VLibras Plugin -->
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
     <!-- Link de acessibilidade -->
     <a href="#main-content" class="skip-to-content">Pular para o conteúdo</a>
 
@@ -204,7 +216,8 @@
                         </div>
                         <div class="card-content">
                             <h3>Iluminação Pública</h3>
-                            <p>Ipem-SP marca presença em evento sobre iluminação pública e cidades inteligentes em Campinas</p>
+                            <p>Ipem-SP marca presença em evento sobre iluminação pública e cidades inteligentes em
+                                Campinas</p>
                             <a href="#" class="read-more">Leia Mais</a>
                         </div>
                     </div>
@@ -309,8 +322,8 @@
                         <p><strong>Telefone:</strong> 11 3581-2235</p>
                         <p>Soliciatções relacioandas à Lei de Acesso à Informação podem ser feitas por este canal</p>
                         <p><strong>Email:</strong>ouvidoria@ipem.sp.gov.br</p>
+                    </div>
                 </div>
-            </div>
         </section>
 
         <!-- Newsletter -->
@@ -384,21 +397,21 @@
                 <div class="container-sp">
                     <section class="sessao-botoes">
                         <div class="linha-botoes">
-                        <div class="coluna-4">
-                            <a href="https://www.ouvidoria.sp.gov.br/Portal/Default.aspx"
-                                class="btn btn-model">Ouvidoria</a>
-                        </div>
+                            <div class="coluna-4">
+                                <a href="https://www.ouvidoria.sp.gov.br/Portal/Default.aspx"
+                                    class="btn btn-model">Ouvidoria</a>
+                            </div>
 
-                        <div class="coluna-4">
-                            <a href="http://www.transparencia.sp.gov.br/" class="btn btn-model">Transparência</a>
-                        </div>
+                            <div class="coluna-4">
+                                <a href="http://www.transparencia.sp.gov.br/" class="btn btn-model">Transparência</a>
+                            </div>
 
-                        <div class="coluna-4">
-                            <a href="http://www.sic.sp.gov.br/" class="btn btn-model">SIC</a>
+                            <div class="coluna-4">
+                                <a href="http://www.sic.sp.gov.br/" class="btn btn-model">SIC</a>
+                            </div>
                         </div>
-                    </div>
                     </section>
-                    
+
                 </div>
 
                 <div class="container rodape">
@@ -417,6 +430,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="https://cdn.userway.org/widget.js" data-account="Fg6JuH8nWN"></script>
 </body>
 
 </html>
