Altera o layout do banner e remove o botão

--- a/index.html
+++ b/index.html
@@ -100,9 +100,15 @@
                     <li class="dropdown">
                         <a href="#cidadao" aria-haspopup="true" aria-expanded="false">Cidadão</a>
                         <div class="dropdown-content">
-                            <a href="#">Serviços</a>
                             <a href="#">Direitos do Consumidor</a>
                             <a href="#">Perguntas Frequentes</a>
+                        </div>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#servicos" aria-haspopup="true" aria-expanded="false">Serviços</a>
+                        <div class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
                         </div>
                     </li>
                     <li class="dropdown">
@@ -145,8 +151,6 @@
                     </h1>
                     <p class="animate__animated animate__fadeInUp"> Garantindo a confiabilidade das medições e a
                         qualidade dos produtos para a sociedade</p>
-                    <a href="#servicos" class="btn btn-primary animate__animated animate__fadeInUp">Conheça nossos
-                        serviços</a>
                 </div>
             </div>
         </section>
